FIX: Double scroll on content
The content on each page after scrolling to the bottom could be scrolled
down again shifting the page down. If the page was scrolled to the top,
some of the content is cut off until the page is scrolled up again.

This was caused by the top margin on the content wrapper. The margin was
replaced with padding.

--- a/src/food_hub/assets/style/style.scss
+++ b/src/food_hub/assets/style/style.scss
@@ -102,8 +102,7 @@ body {
     overflow-x: hidden;
     height: 100%;
     background-color: #f4f6f9;
-    padding: 1rem 2rem 6rem 2rem;
-    margin-top: 52px;
+    padding: 5rem 2rem;
 
     @include media-breakpoint-down(md) {
         padding-left: 0.5rem;
